# nftables-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: Containerfile
.github/workflows/: rust.yml
resources/test/fixtures/: README.md  set-map-flag-1.json  set-map-flag-2.json  single-fib-flag-1.json  single-fib-flag-2.json  synproxy-flag-1.json  synproxy-flag-2.json
resources/test/json/: bitflags.json  nat.json  nftables-init.json
resources/test/nft/: bitflags.nft  nat.nft  nftables-init.nft
src/: batch.rs  cli.rs  error.rs  expr.rs  helper.rs  lib.rs  main.rs  schema.rs  stmt.rs  types.rs  visitor.rs
tests/: deserialize.rs  fixtures.rs  helper_tests.rs  json_tests.rs  serialize.rs
